--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
