--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
